# ha-rag-bridge

./: .dockerignore  .env.containerized.example  .env.dev.example  .env.embedding  .env.embedding.example  .env.embedding.recommendations  .env.example  .env.home  .env.sample  .env.similarity.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEV-SETUP.md  DEV_ENV.md  Dockerfile  HAG_RAG_EXTENDED_OPENAI_INTEGRATION.md  INTEGRATION_GUIDE.md  Makefile  Makefile.integration  README-production.md  README.md  README_PHASE3_HOOK_INTEGRATION.md  RESTART-STACK.md  STRUCTURE.md  THRESHOLD_OPTIMIZATION_SUMMARY.md  TODO.md  auto_migrate.py  check_areas.py  debug_memory_service.py  debug_vector_scores.py  debug_workflow.py  debug_workflow_clean.py  demo.py  demo_ingestion_friendly_names.py  docker-compose.dev.yml  docker-compose.full-stack.yml  docker-compose.home.yml  docker-compose.yml  (+36 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.home.json  devcontainer.json  devcontainer.json.dev  devcontainer.standard.json
app/: main.py  schemas.py
config/: langgraph.json  language_patterns_core.yaml
docker/: uvicorn_log.ini
docs/: ENVIRONMENT_SETUP.md  PORTAINER_MIGRATION.md  STACK_STRATEGIES.md  architecture.mmd  conversation-rag-strategies.md  examples.md
ha_rag_bridge/: __init__.py  api.py  config.py  ingest.py  logging.py  pipeline.py  settings.py  similarity_config.py
memory-bank/: activeContext.md  architect.md  async-conversation-memory.md  cluster-based-rag-optimization.md  config-schema-changes.md  conversation-context-enhancement-plan.md  decisionLog.md  implementation-checklist.md  langgraph-migration-plan.md  litellm-hook-fix-summary.md  mcp-integration-setup.md  productContext.md  progress.md  projectBrief.md  sbert-implementation-status.md  sbert-query-rewriting-plan.md  smart-home-intelligence-plan.md  stream-metrics-optimization.md  system-prompt-optimization.md  systemPatterns.md
migrations/: 001_init_collections.arangodb  002_manual_collection.arangodb  02__meta_collection.py  03__rename_meta.py  04__workflow_traces_collection.py
monitoring/: prometheus.yml
notebooks/: poc_playground.ipynb  poc_playground.py
scripts/: advisor.sh  auto-cleanup.sh  bootstrap_clusters.py  embedding_backends.py  friendly_name_generator.py  ha_config_advisor.py  ingest.py  ingest_docs.py  init_arango.py  switch_env.sh  test-mcp-servers.sh  test_cluster_rag.py  watch_entities.py
tests/: __init__.py  test_adaptive.py  test_admin.py  test_area_aliases.py  test_bad_name.py  test_bootstrap.py  test_chunker.py  test_cli.py  test_config_flow.py  test_demo.py  (+28 more)
(+210 files in other folders)
