[tool.poetry]
name = "ha-rag-bridge"
version = "0.1.0"
description = "Home-Assistant RAG bridge"
authors = ["lopeti <lovas.peter.hu@gmail.com>"]
packages = [
    { include = "app" }
    ,{ include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.27"
openai = "^1.25.0"
python-arango = "^7.9.0"
sentence-transformers = "^2.2"
websockets = "^12.0"
influxdb-client = "^1.40"
cachetools = "^5.3"
colorama = "^0.4"
"pdfminer.six" = "^20221105"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
