[tool.poetry]
name = "ha-rag-bridge"
version = "0.1.0"
description = "Home-Assistant RAG bridge"
authors = ["lopeti <lovas.peter.hu@gmail.com>"]
packages = [
    { include = "app" }
    ,{ include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
uvicorn = "^0.36.0"
httpx = "^0.28.0"
openai = "^1.57.0"
python-arango = "^8.2.0"
sentence-transformers = "^3.3.0"
websockets = "^14.1"
influxdb-client = "^1.47.0"
cachetools = "^5.5.0"
colorama = "^0.4.6"
"pdfminer.six" = "^20231228"
structlog = "^24.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
