[tool.poetry]
name = "ha-rag-bridge"
version = "0.1.0"
description = "Home-Assistant RAG bridge"
authors = ["lopeti <lovas.peter.hu@gmail.com>"]
packages = [
    { include = "app" }
    ,{ include = "scripts" }
    ,{ include = "ha_rag_bridge" }
]

[tool.poetry.dependencies]
python = ">=3.13.2,<4.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.28.1"
openai = "^1.25.0"
python-arango = "^8.2"
sentence-transformers = "^2.2"
transformers = "^4.44"
websockets = "^13.0"
influxdb-client = "^1.40"
cachetools = "^5.3"
colorama = "^0.4"
"pdfminer.six" = "^20221105"
structlog = "^24"
pydantic = "^2.7"
google-genai = "^0.6.0"
typer = "^0.12.3"
rouge-score = "^0.1.2"
influxdb = "^5.3.2"

[tool.poetry.scripts]
ha-rag-bootstrap = "ha_rag_bridge.bootstrap.cli:main"
ha-rag = "ha_rag_bridge.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
streamlit = "^1.34"
pytest-asyncio = "^0.23"
debugpy = "^1.6.0"
pre-commit = "^2.20.0"
homeassistant-stubs = "^2025.7.3"
types-cachetools = "^6.1.0.20250717"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
